<?xml version="1.0" encoding="utf-8"?>

<!--
fragment_ohm.xml
This file is for the OhmFragment.java
// TODO If I want to use ohm sign-symbol,then it is here Ω

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Page's title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ohm_law_title"
        android:textSize="30sp"
        android:id="@+id/ohm_title"/>
    <!-- TODO this ohm_title name conflicts with the one in fragment_formulas.txt -->

    <!-- Scroll-view for the entire page -->
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <!-- Container layout for the entire page -->
        <RelativeLayout
            android:id="@+id/innerScrollLayout"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingBottom="50dp">

            <!-- Voltage layout -->
            <LinearLayout
                android:id="@+id/ohm_layout_v"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@drawable/border_bottom_black">

                <!-- Voltage title -->
                <TextView
                    android:id="@+id/ohm_title_v"
                    android:text="@string/voltage_f"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false" />

                <!-- Voltage input -->
                <EditText
                    android:id="@+id/ohm_input_v"
                    android:inputType="numberDecimal"
                    android:hint="@string/voltage"
                    android:autofillHints="123456"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:ems="10" />
            </LinearLayout>

            <!-- Amp layout -->
            <LinearLayout
                android:id="@+id/ohm_layout_i"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ohm_layout_v"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:background="@drawable/border_bottom_black">

                <!-- Amp title -->
                <TextView
                    android:id="@+id/ohm_title_i"
                    android:text="@string/current_f"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false" />

                <!-- Amp input -->
                <EditText
                    android:id="@+id/ohm_input_i"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/current"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:ems="10" />
            </LinearLayout>

            <!-- Resistance layout -->
            <LinearLayout
                android:id="@+id/ohm_layout_r"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ohm_layout_i"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:background="@drawable/border_bottom_black">

                <!-- Resistance title -->
                <TextView
                    android:id="@+id/ohm_title_r"
                    android:text="@string/resistance_f"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false" />

                <!-- Resistance input -->
                <EditText
                    android:id="@+id/ohm_input_r"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/resistance"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:ems="10" />
            </LinearLayout>

            <!-- Feedback - result layout -->
            <LinearLayout
                android:id="@+id/ohm_layout_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ohm_layout_r"
                android:layout_marginTop="20dp"
                android:weightSum="3"
                android:background="@drawable/border_bottom_black">

                <!-- Result text-title -->
                <TextView
                    android:id="@+id/ohm_title_feedback"
                    android:text="@string/result"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false" />

                <!-- "Calculate" button -->
                <Button
                    android:id="@+id/ohm_button_calc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:layout_weight="1"
                    android:layout_marginEnd="25dp"
                    app:backgroundTint="#4A4A4A"/>
            </LinearLayout>

            <!-- Credits text - developed by -->
        </RelativeLayout>
    </ScrollView>

    <!-- Including the credits -->
    <include layout="@layout/bottom_credits" />
</RelativeLayout>